implemented support for vegetarian filter to search function