@@ -31,12 +31,22 @@ public class RecipeService {
 
     public List<RecipeDTO> searchRecipes(List<String> includeIngredients,
                                          List<String> excludeIngredients,
-                                         String keyword) {
+                                         String keyword,
+                                         Boolean isVegetarian) {
         List<Recipe> recipes = recipeDAO.searchRecipes(includeIngredients, excludeIngredients, keyword);
 
-        return recipes.stream()
+        List<RecipeDTO> recipeDTOs = recipes.stream()
                 .map(RecipeMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        // Filter out non-vegetarian recipes if isVegetarian is true
+        if (Boolean.TRUE.equals(isVegetarian)) {
+            recipeDTOs = recipeDTOs.stream()
+                    .filter(RecipeDTO::isVegetarian)
+                    .collect(Collectors.toList());
+        }
+
+        return recipeDTOs;
     }
 
     public Recipe saveRecipe(Recipe recipe) {
